add(ruff && mypy): add ruff and mypy for better code quality

--- a/src/tests/local_benchmark/benchmark_analysis.ipynb
+++ b/src/tests/local_benchmark/benchmark_analysis.ipynb
@@ -17,25 +17,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from pathlib import Path\n",
     "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "#Notebook don't know path of the project\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Notebook don't know path of the project\n",
     "project_root = Path().resolve().parent.parent.parent\n",
     "if str(project_root) not in sys.path:\n",
     "    sys.path.insert(0, str(project_root))\n",
     "\n",
-    "from src.tests.utils import get_results_path, analyze_benchmark_study\n",
+    "from src.tests.utils import analyze_benchmark_study, get_results_path\n",
     "\n",
     "# Set plotting style\n",
     "sns.set_style(\"whitegrid\")\n",
-    "plt.rcParams['figure.figsize'] = (14, 8)\n",
-    "plt.rcParams['font.size'] = 10\n",
-    "\n",
-    "\n"
+    "plt.rcParams[\"figure.figsize\"] = (14, 8)\n",
+    "plt.rcParams[\"font.size\"] = 10"
    ]
   },
   {
@@ -87,9 +86,9 @@
     "if results_file.exists():\n",
     "    df = pd.read_csv(results_file)\n",
     "    print(f\"\\n📊 Total studies in CSV: {len(df)}\")\n",
-    "    print(f\"\\nAvailable studies:\")\n",
+    "    print(\"\\nAvailable studies:\")\n",
     "    for idx in range(len(df)):\n",
-    "        study_name = df.iloc[idx]['pypsa_network_name']\n",
+    "        study_name = df.iloc[idx][\"pypsa_network_name\"]\n",
     "        print(f\"  Row {idx}: {study_name}\")\n",
     "else:\n",
     "    print(f\"\\n❌ Error: Results file not found at {results_file}\")"
